header directory change logo

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <body>
 <!-- Header -->
 <nav class="navbar navbar-light bg-light justify-content-between">
-  <a class="navbar-brand"> <img src="./logo-header.svg" alt=""></a>
+  <a class="navbar-brand"> <img src="./img/logo-header.svg" alt=""></a>
 
   <form class="form-inline">
     <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
